--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- list Items -->
         <div class="list">
             <div class="item active">
-                <img src="image/img1.png">
+                <img src="car1.jpg">
                 <div class="content">
                     <p>$500000</p>
                     <h2>Mercedes Benz</h2>
