--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- list Items -->
         <div class="list">
             <div class="item active">
-                <img src="car1.jpg">
+                <img src="mercedes.jpg">
                 <div class="content">
                     <p>$500000</p>
                     <h2>Mercedes Benz</h2>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="bmw.jpg">
                 <div class="content">
                     <p>$700000</p>
                     <h2>BMW</h2>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="chevrolet.jpg">
                 <div class="content">
                     <p>$600000</p>
                     <h2>Chevrolet</h2>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="mustang.jpg">
                 <div class="content">
                     <p>$34440</p>
                     <h2>Mustang</h2>
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img5.jpg">
+                <img src="dodge.jpg">
                 <div class="content">
                     <p>$400000</p>
                     <h2>Dodge Challenger</h2>
@@ -110,31 +110,31 @@
         <!-- thumbnail -->
         <div class="thumbnail">
             <div class="item active">
-                <img src="image/img1.png">
+                <img src="mercedes.jpg">
                 <div class="content">
                     Mercedes
                 </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="bmw.jpg">
                 <div class="content">
                     BMW
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="chevrolet.jpg">
                 <div class="content">
                     Chevrolet 
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="mustang.jpg">
                 <div class="content">
                   Mustang 
                 </div>
             </div>
             <div class="item">
-                <img src="image/img5.jpg">
+                <img src="dodge.jpg">
                 <div class="content">
                     Dodge 
                 </div>
@@ -145,7 +145,7 @@
     <div class="models" id="models">
         <div class="list">
             <div class="item">
-                <img src="images/img1.png">
+                <img src="mercedes.jpg">
                 <div class="introduce">
                     <div class="title">VINTAGE CARS</div>
                     <div class="topic">Mercedes Benz</div>
@@ -188,7 +188,7 @@
             </div>
 
             <div class="item">
-                <img src="images/img2.png">
+                <img src="bmw.jpg">
                 <div class="introduce">
                     <div class="title">VINTAGE CARS</div>
                     <div class="topic">BMW</div>
@@ -230,7 +230,7 @@
             </div>
 
             <div class="item">
-                <img src="images/img3.png">
+                <img src="dodge.jpg">
                 <div class="introduce">
                     <div class="title">VINTAGE CARS</div>
                     <div class="topic">Dodge KingsWay</div>
@@ -272,7 +272,7 @@
             </div>
 
             <div class="item">
-                <img src="images/img4.png">
+                <img src="chevrolet.jpg">
                 <div class="introduce">
                     <div class="title">VINTAGE CARS</div>
                     <div class="topic">Chevrolet</div>
@@ -314,7 +314,7 @@
             </div>
 
             <div class="item">
-                <img src="images/img5.png">
+                <img src="mercedes.jpg">
                 <div class="introduce">
                     <div class="title">VINTAGE CARS</div>
                     <div class="topic">Audi</div>
@@ -400,7 +400,7 @@
         </ul>
       </div>
     </div>
-    <img src="image.jpg">
+    <img src="dodge.jpg">
   </section>
   
 
@@ -441,7 +441,7 @@
             <!-- Contact image container -->
             <div class="contact-img w-full md:w-1/2">
                 <!-- Using a placeholder image for a working example -->
-                <img src="https://placehold.co/600x400/1e293b/d1d5db?text=Contact+Image" alt="A placeholder image" class="w-full h-auto rounded-xl shadow-lg">
+                <img src="dodge.jpg" alt="A placeholder image" class="w-full h-auto rounded-xl shadow-lg">
             </div>
         </section>
     </div>
