--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         <!-- list Items -->
         <div class="list">
             <div class="item active">
-                <video src="mercedes.mp4"></video>
+                <video autoplay loop muted>
+                    <source src="mercedes.mp4" type="video">
+                </video>
                 <div class="content">
                     <p>$500000</p>
                     <h2>Mercedes Benz</h2>
