--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         <!-- list Items -->
         <div class="list">
             <div class="item active">
-                <video autoplay loop muted>
-                    <source src="mercedes.mp4" type="video">
+                <div class="mercedes">
+                <video  autoplay loop muted src="mercedes.mp4">
                 </video>
+                </div>
                 <div class="content">
                     <p>$500000</p>
                     <h2>Mercedes Benz</h2>
