--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="list">
             <div class="item active">
                 <div class="mercedes">
-                <video  autoplay loop muted src="mercedes.mp4">
+                <video width="100%" height="100%" autoplay loop muted src="mercedes.mp4">
                 </video>
                 </div>
                 <div class="content">
