--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
         <div class="list">
             <div class="item active">
                 <div class="mercedes">
-                <video autoplay loop muted src="mercedes.mp4">
+                <video autoplay muted loop id="myVideo">
+  <source src="mercedes.mp4" type="video/mp4">
                 </video>
+                    
                 </div>
                 <div class="content">
                     <p>$500000</p>
