--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                 </div>
             </div>
             <div class="item">
-                <img src="bmw.jpg">
+                 <video autoplay muted loop id="myVideo">
+  <source src="mustang.mp4" type="video/mp4">
+                 </video>
                 <div class="content">
                     <p>$700000</p>
                     <h2>BMW</h2>
@@ -74,7 +76,9 @@
                 </div>
             </div>
             <div class="item">
-                <img src="chevrolet.jpg">
+                 <video autoplay muted loop id="myVideo">
+  <source src="mercedes.mp4" type="video/mp4">
+                 </video>
                 <div class="content">
                     <p>$600000</p>
                     <h2>Chevrolet</h2>
@@ -85,7 +89,9 @@
                 </div>
             </div>
             <div class="item">
-                <img src="mustang.jpg">
+                 <video autoplay muted loop id="myVideo">
+  <source src="mustang.mp4" type="video/mp4">
+                 </video>
                 <div class="content">
                     <p>$34440</p>
                     <h2>Mustang</h2>
@@ -96,7 +102,9 @@
                 </div>
             </div>
             <div class="item">
-                <img src="dodge.jpg">
+                 <video autoplay muted loop id="myVideo">
+  <source src="mercedes.mp4" type="video/mp4">
+                 </video>
                 <div class="content">
                     <p>$400000</p>
                     <h2>Dodge Challenger</h2>
