--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="item">
                  <video autoplay muted loop id="myVideo">
-  <source src="mercedes.mp4" type="video/mp4">
+  <source src="car3.mp4" type="video/mp4">
                  </video>
                 <div class="content">
                     <p>$600000</p>
@@ -90,7 +90,7 @@
             </div>
             <div class="item">
                  <video autoplay muted loop id="myVideo">
-  <source src="mustang.mp4" type="video/mp4">
+  <source src="car4.mp4" type="video/mp4">
                  </video>
                 <div class="content">
                     <p>$34440</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="item">
                  <video autoplay muted loop id="myVideo">
-  <source src="mercedes.mp4" type="video/mp4">
+  <source src="car5.mp4" type="video/mp4">
                  </video>
                 <div class="content">
                     <p>$400000</p>
