--- a/index.html
+++ b/index.html
@@ -123,31 +123,31 @@
         <!-- thumbnail -->
         <div class="thumbnail">
             <div class="item active">
-                <img src="mercedes.jpg">
+                <img src="mercedes.mp4">
                 <div class="content">
                     Mercedes
                 </div>
             </div>
             <div class="item">
-                <img src="bmw.jpg">
+                <img src="mustang.mp4">
                 <div class="content">
                     BMW
                 </div>
             </div>
             <div class="item">
-                <img src="chevrolet.jpg">
+                <img src="car3.mp4">
                 <div class="content">
                     Chevrolet 
                 </div>
             </div>
             <div class="item">
-                <img src="mustang.jpg">
+                <img src="car4.mp4">
                 <div class="content">
                   Mustang 
                 </div>
             </div>
             <div class="item">
-                <img src="dodge.jpg">
+                <img src="mustang.mp4">
                 <div class="content">
                     Dodge 
                 </div>
@@ -413,7 +413,9 @@
         </ul>
       </div>
     </div>
-    <img src="dodge.jpg">
+    <video autoplay muted loop id="myabout">
+        <source src="bgv.mp4" type="video/mp4">
+    </video>
   </section>
   
 
