--- a/index.html
+++ b/index.html
@@ -123,31 +123,31 @@
         <!-- thumbnail -->
         <div class="thumbnail">
             <div class="item active">
-                <img src="mercedes.mp4">
+                <img src="car2.jpg">
                 <div class="content">
                     Mercedes
                 </div>
             </div>
             <div class="item">
-                <img src="mustang.mp4">
+                <img src="car1.jpg">
                 <div class="content">
                     BMW
                 </div>
             </div>
             <div class="item">
-                <img src="car3.mp4">
+                <img src="car4.jpeg">
                 <div class="content">
                     Chevrolet 
                 </div>
             </div>
             <div class="item">
-                <img src="car4.mp4">
+                <img src="car4.jpeg">
                 <div class="content">
                   Mustang 
                 </div>
             </div>
             <div class="item">
-                <img src="mustang.mp4">
+                <img src="car1.jpg">
                 <div class="content">
                     Dodge 
                 </div>
