--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="car4.jpeg">
+                <img src="car3.jpeg">
                 <div class="content">
                     Chevrolet 
                 </div>
@@ -456,7 +456,7 @@
             <!-- Contact image container -->
             <div class="contact-img w-full md:w-1/2">
                 <!-- Using a placeholder image for a working example -->
-                <img src="dodge.jpg" alt="A placeholder image" class="w-full h-auto rounded-xl shadow-lg">
+                <video src="bgv.mp4" alt="A placeholder image" class="w-full h-auto rounded-xl shadow-lg"></video>
             </div>
         </section>
     </div>
